--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,6 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+    <img src="/views/bookingimg.webp"  >
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -28,6 +29,7 @@
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
                             <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                          
                         </form>
                     </div>
                 </div>
