--- a/views/meetingRoom.ejs
+++ b/views/meetingRoom.ejs
@@ -35,9 +35,7 @@
                         <button type="submit" class="btn btn-danger">Supprimer</button>
                     </form>
 
-                    <form action="/meetingRoom/<%= meetingRoom._id %>" method="POST">
-                        <input type="hidden" name="_method" value="PUT">
-
+                    <form action="/meetingRoom/<%= meetingRoom._id %>/edit" method="GET">
                         <button type="submit" class="btn btn-primary">Modifier</button>
                     </form>
 
