--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -62,8 +62,8 @@
         <ul>
             <% reservation.forEach(reservation => { %>
                 <li>
-                    <strong>Utilisateur :</strong> <%= reservation.user.username %> <br>
-                    <strong>Salle de réunion :</strong> <%= reservation.meetingRoom.name %> <br>
+                    <strong>Utilisateur :</strong> <%= reservation.user ? reservation.user.email : 'Unknown' %> <br>
+                    <strong>Salle de réunion :</strong> <%= reservation.meetingRoom ? reservation.meetingRoom.name : 'Unknown' %> <br>
                     <strong>Date de début :</strong> <%= reservation.startTime %> <br>
                     <strong>Date de fin :</strong> <%= reservation.endTime %> <br>
                     <form action="/reservation/<%= reservation._id %>?_method=DELETE" method="POST">
@@ -71,22 +71,9 @@
                     </form>
                 </li>
             <% }); %>
+
         </ul>
 
-        <h2>Ajouter une nouvelle réservation</h2>
-        <form action="/reservation" method="POST">
-            <label for="meetingRoom">Salle de réunion :</label>
-            <select id="meetingRoom" name="meetingRoom" required class="form-control">
-                <% meetingRoom.forEach(meetingRoom => { %>
-                    <option value="<%= meetingRoom._id %>"><%= meetingRoom.name %></option>
-                <% }); %>
-            </select> <br>
-            <label for="startTime">Date de début :</label>
-            <input type="datetime-local" id="startTime" name="startTime" required class="form-control"> <br>
-            <label for="endTime">Date de fin :</label>
-            <input type="datetime-local" id="endTime" name="endTime" required class="form-control"> <br>
-            <button type="submit" class="btn btn-primary">Réserver</button>
-        </form>
     </div>
 </body>
 </html>
