--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -69,9 +69,10 @@
                     <form action="/reservation/<%= reservation._id %>?_method=DELETE" method="POST">
                         <button type="submit">Supprimer</button>
                     </form>
-                    <form action="/reservation/<%= meetingRoom._id %>/edit" method="GET">
+                    <form action="/reservation/<%= reservation._id %>/edit" method="GET">
                         <button type="submit" class="btn btn-primary">Modifier</button>
                     </form>
+
                 </li>
             <% }); %>
 
