--- a/views/meetingRoom.ejs
+++ b/views/meetingRoom.ejs
@@ -19,6 +19,29 @@
             margin-right: 5px; /* Add margin between buttons */
         }
     </style>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">MyBookingApp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/calendar">Calendar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/reservation">Reservation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/meetingRoom">Rooms</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">logout</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 </head>
 <body>
 <div class="container">
@@ -37,6 +60,7 @@
             <button type="submit" class="btn btn-primary">Ajouter</button>
         </form>
     </div>
+
     <ul class="list-group">
         <% if (meetingRoom && meetingRoom.length) { %>
             <% meetingRoom.forEach(meetingRoom => { %>
